# nntile

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ALL_CI_FIXES_COMPLETE.md  ALL_FIXES_FINAL.md  CHANGES_SUMMARY.md  CI_FIXES_APPLIED.md  CI_GREEN_CHECKLIST.md  CMakeLists.txt  COMPLETE_CI_STATUS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev-env  Dockerfile.dev-env-cpu  Dockerfile.dev-env-gpu  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_NOTES.md  FINAL_STATUS.md  FLASH_ATTENTION_IMPLEMENTATION.md  GRAPH_OPERATIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MASTER_SUMMARY.md  NNTile2.md  PRECOMMIT_FIXES_COMPLETE.md  PreLoad.cmake  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  READY_FOR_CI.md  STYLE_GUIDE.md  TASK_COMPLETION_REPORT.md  add_references_systematic.py  build.sh  compose.yaml  fix_verification_tests.py  (+14 more)
examples/: CMakeLists.txt  autograd_add_example.cc  autograd_mlp_tile_compare_example.cc  deep_relu_forward.cc  deep_relu_training.cc  deeplinear_mnist.cc  fc.py  forward.cc  gpt2_generate.cc  gpt2_generate.py  gpt2_inference_server.py  gpt_neox_generate.cc  gpt_neox_generate.py  gptneo_generate.cc  gptneo_generate.py  graph_mlp_example.cc  inference_benchmark.py  linear_layer_example.cc  linear_manual_example.cc  llama_generate.cc  llama_generate.py  llama_graph_training.cc  llama_inference_server.py  mixer.cc  mixer.py  mlp_mnist.cc  t5_generate.cc  t5_generate.py  tensor.cc  tile.cc  train.out
infra/gateway/: .gitignore  README.md  pyproject.toml
infra/tgbot/: .gitignore  README.md  pyproject.toml
src/: CMakeLists.txt  base_types.cc  config.cc  context.cc  linear_layer.cc  mlp_layer.cc
src/autograd/: add.cc  function.cc  tensor.cc  visualize.cc
src/graph/: CMakeLists.txt  autograd_function.cc  compiled_graph.cc  compiled_graph_ops.cc  dtype.cc  grad_mode.cc  gradient_registry.cc  kv_cache.cc  logical_graph.cc  logical_graph_ops.cc  nn_graph.cc  nn_graph_backward.cc  op_node.cc  runtime.cc  tensor_graph_node.cc  tensor_node.cc  tensor_spec.cc
src/io/: safetensors.cc
src/kernel/: CMakeLists.txt  cblas.cc  cublas.cc  cudnn.cc
src/layer/: gelu.cc  gelutanh.cc  linear.cc  mlp.cc
src/logger/: logger_thread.cc  tcp_client.cc  websocket_client.cc
src/model/: deep_linear.cc
src/module/: activation.cc  embedding.cc  gated_mlp.cc  gelu.cc  linear.cc  linear_manual.cc  mlp.cc  module.cc  mse_loss.cc  rms_norm.cc  sdpa.cc
src/optimizer/: grad_descent.cc  sgd.cc
src/starpu/: accumulate.cc  accumulate_hypot.cc  accumulate_maxsumexp.cc  adam_step.cc  adamw_step.cc  add.cc  add_fiber.cc  add_fiber_inplace.cc  add_inplace.cc  add_scalar.cc  add_slice.cc  add_slice3.cc  add_slice_inplace.cc  addcdiv.cc  axpy.cc.in  bias.cc  bias_fiber.cc  bias_outer.cc  bias_slice.cc  biasprod.cc  biasprod_outer.cc  clear.cc  codelet.cc  config.cc  conv2d.cc  conv2d_bwd_input_inplace.cc  conv2d_bwd_weight_inplace.cc  conv2d_inplace.cc  conv2d_v2_bwd_input_inplace.cc  conv2d_v2_inplace.cc  copy.cc  copy_intersection.cc  dgelu.cc  dgelutanh.cc  drelu.cc  embedding.cc  embedding_backward.cc  fill.cc  flash_attention.cc  flash_maxsumexp.cc  (+99 more)
src/tensor/: adam_step.cc  adamw_step.cc  add.cc  add_fiber.cc  add_fiber_inplace.cc  add_inplace.cc  add_scalar.cc  add_slice.cc  add_slice3.cc  add_slice_inplace.cc  addcdiv.cc  axpy.cc  bias.cc  bias2.cc  bias_fiber.cc  bias_outer.cc  bias_slice.cc  biasprod.cc  biasprod_outer.cc  clear.cc  conv2d.cc  conv2d_bwd_input_inplace.cc  conv2d_bwd_weight_inplace.cc  conv2d_inplace.cc  conv2d_v2.cc  conv2d_v2_bwd_input_inplace.cc  conv2d_v2_inplace.cc  copy.cc  copy_intersection.cc  dgelu.cc  dgelutanh.cc  distributions.cc  drelu.cc  embedding.cc  embedding_backward.cc  fill.cc  flash_maxsumexp.cc  flash_sdpa_bwd_cudnn.cc  flash_sdpa_fwd_cudnn.cc  flash_softmax_gemm.cc  (+89 more)
src/tile/: adam_step.cc  adamw_step.cc  add.cc  add_fiber.cc  add_fiber_inplace.cc  add_inplace.cc  add_scalar.cc  add_slice.cc  add_slice3.cc  add_slice_inplace.cc  addcdiv.cc  axpy.cc  bias.cc  bias.cu  bias2.cc  bias_fiber.cc  bias_outer.cc  bias_slice.cc  biasprod.cc  biasprod_outer.cc  clear.cc  conv2d_bwd_input_inplace.cc  conv2d_bwd_weight_inplace.cc  conv2d_inplace.cc  copy.cc  copy_intersection.cc  dgelu.cc  dgelutanh.cc  drelu.cc  embedding.cc  embedding_backward.cc  fill.cc  flash_sdpa_bwd_cudnn.cc  flash_sdpa_fwd_cudnn.cc  fp16_to_fp32.cc  fp32_to_fp16.cc  gelu.cc  gelu_backward.cc  gelu_inplace.cc  gelutanh.cc  (+81 more)
tests/: CMakeLists.txt  constants.cc  starpu.cc  testing.hh
tests/autograd/: CMakeLists.txt  autograd.cc
tests/graph/: CMakeLists.txt  compiled_graph.cc  compiled_graph_ops.cc  context_fixture.hh  logical_graph.cc  logical_graph_ops.cc  nn.cc  nn_graph.cc  test_compiled_graph.cc  test_compiled_ops.cc  test_logical_gemm.cc  test_logical_graph.cc  test_logical_ops.cc  test_nn_graph.cc
tests/io/: CMakeLists.txt  module_save_load.cc  safetensors.cc
tests/kernel/: CMakeLists.txt  accumulate_attn_output.cc  accumulate_maxsumexp.cc  adam_step  adam_step.cc  adam_step_catch2.cc  adamw_step.cc  add.cc  add_fiber.cc  add_fiber_inplace.cc  add_inplace.cc  add_scalar.cc  add_slice.cc  add_slice3.cc  add_slice_inplace.cc  addcdiv.cc  bias.cc  bias_fiber.cc  bias_slice.cc  conv2d.cc  conv2d_bwd_input_inplace.cc  conv2d_bwd_weight_inplace.cc  conv2d_inplace.cc  copy.cc  copy_intersection.cc  dgelu.cc  dgelutanh.cc  drelu.cc  embedding.cc  embedding_backward.cc  fill.cc  flash_attention.cc  flash_sdpa_bwd_cudnn.cc  flash_sdpa_fwd_cudnn.cc  flash_softmax_gemm.cc  gelu.cc  gelu_backward.cc  gelu_inplace.cc  gelutanh.cc  gelutanh_backward.cc  (+68 more)
tests/layer/: CMakeLists.txt  fully_connected.cc  gelu.cc  gelutanh.cc  linear.cc  mlp.cc
tests/model/: CMakeLists.txt  deep_linear.cc
tests/module/: CMakeLists.txt  activation.cc  embedding.cc  gated_mlp.cc  gelu.cc  linear.cc  linear_manual.cc  mlp.cc  module.cc  mse_loss.cc  sdpa.cc  test_gelu.cc  test_linear.cc  test_mlp.cc  test_module.cc
tests/starpu/: CMakeLists.txt  accumulate.cc  accumulate_hypot.cc  accumulate_maxsumexp.cc  adam_step.cc  add.cc  (+109 more)
(+3592 files in other folders)
